--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Todos React Site | React Redux Two Lab</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <title>Todos a la Redux | React Redux Two Lab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
